--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -6,7 +6,7 @@
   background-color: variables.$dark-blue;
   color: variables.$white;
   flex-direction: column;
-  gap: 4rem;
+  gap: 2rem 4rem;
   height: auto;
   padding: 2rem variables.$padding-large;
 
