--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -113,7 +113,7 @@ $transparent-blue: scale-color(
   align-items: center;
   display: none;
   flex-direction: column;
-  gap: 0 3rem;
+  gap: 0 1rem;
   height: 100%;
   list-style: none;
   margin: 0;
@@ -127,6 +127,10 @@ $transparent-blue: scale-color(
     justify-content: flex-end;
     margin-left: auto;
     margin-top: 0;
+  }
+
+  @include from(lg) {
+    column-gap: 3rem;
   }
 }
 
@@ -161,7 +165,7 @@ $transparent-blue: scale-color(
 }
 
 .nav-btn {
-  @include upto(md) {
+  @include upto(sm) {
     background-color: transparent !important;
     border-color: variables.$white !important;
     color: variables.$white;
